--- a/vcr_cassettes/bounces.yml
+++ b/vcr_cassettes/bounces.yml
@@ -5,10 +5,10 @@ http_interactions:
     uri: https://api:<APIKEY>@api.mailgun.net/v3/DOMAIN.TEST/bounces
     body:
       encoding: US-ASCII
-      string: address=integration-test-email%40DOMAIN.TEST&code=550&error=Integration%20Test
+      string: address=integration-test-email%40DOMAIN.TEST&code=550&error=Integration%<APIKEY>0Test
     headers:
       Accept:
-      - "*/*; q=0.5, application/xml"
+      - ! '*/*; q=0.5, application/xml'
       Accept-Encoding:
       - gzip, deflate
       Content-Length:
@@ -25,7 +25,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 08 Jan 2016 20:33:28 GMT
+      - Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>8 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -33,7 +33,7 @@ http_interactions:
       Connection:
       - keep-alive
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Access-Control-Max-Age:
       - '600'
       Access-Control-Allow-Methods:
@@ -42,7 +42,7 @@ http_interactions:
       - Content-Type, x-requested-with
     body:
       encoding: UTF-8
-      string: '{"address":"integration-test-email@DOMAIN.TEST","message":"Address
+      string: ! '{"address":"integration-test-email@DOMAIN.TEST","message":"Address
         has been added to the bounces table"}'
     http_version: 
   recorded_at: Fri, 08 Jan 2016 20:33:29 GMT
@@ -54,7 +54,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*"
+      - ! '*/*'
       Accept-Encoding:
       - gzip, deflate
       User-Agent:
@@ -67,7 +67,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 08 Jan 2016 20:33:28 GMT
+      - Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>8 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -75,7 +75,7 @@ http_interactions:
       Connection:
       - keep-alive
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Access-Control-Max-Age:
       - '600'
       Access-Control-Allow-Methods:
@@ -84,8 +84,8 @@ http_interactions:
       - Content-Type, x-requested-with
     body:
       encoding: UTF-8
-      string: '{"address":"integration-test-email@DOMAIN.TEST","code":"550","error":"Integration
-        Test","created_at":"Fri, 08 Jan 2016 20:33:28 UTC"}'
+      string: ! '{"address":"integration-test-email@DOMAIN.TEST","code":"550","error":"Integration
+        Test","created_at":"Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>8 UTC"}'
     http_version: 
   recorded_at: Fri, 08 Jan 2016 20:33:29 GMT
 - request:
@@ -96,7 +96,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*"
+      - ! '*/*'
       Accept-Encoding:
       - gzip, deflate
       User-Agent:
@@ -109,7 +109,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 08 Jan 2016 20:33:29 GMT
+      - Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>9 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -117,7 +117,7 @@ http_interactions:
       Connection:
       - keep-alive
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Access-Control-Max-Age:
       - '600'
       Access-Control-Allow-Methods:
@@ -126,8 +126,8 @@ http_interactions:
       - Content-Type, x-requested-with
     body:
       encoding: UTF-8
-      string: '{"items":[{"address":"integration-test-email@DOMAIN.TEST","code":"550","error":"Integration
-        Test","created_at":"Fri, 08 Jan 2016 20:33:28 UTC"}],"paging":{"first":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?limit=100","last":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=last\u0026limit=100","next":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=next\u0026address=integration-test-email%40DOMAIN.TEST\u0026limit=100","previous":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=previous\u0026address=integration-test-email%40DOMAIN.TEST\u0026limit=100"}}'
+      string: ! '{"items":[{"address":"integration-test-email@DOMAIN.TEST","code":"550","error":"Integration
+        Test","created_at":"Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>8 UTC"}],"paging":{"first":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?limit=100","last":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=last\u00<APIKEY>6limit=100","next":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=next\u00<APIKEY>6address=integration-test-email%40DOMAIN.TEST\u00<APIKEY>6limit=100","previous":"https://api.mailgun.net/v3/DOMAIN.TEST/bounces?page=previous\u00<APIKEY>6address=integration-test-email%40DOMAIN.TEST\u00<APIKEY>6limit=100"}}'
     http_version: 
   recorded_at: Fri, 08 Jan 2016 20:33:29 GMT
 - request:
@@ -138,7 +138,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*; q=0.5, application/xml"
+      - ! '*/*; q=0.5, application/xml'
       Accept-Encoding:
       - gzip, deflate
       User-Agent:
@@ -151,15 +151,15 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 08 Jan 2016 20:33:29 GMT
+      - Fri, 08 Jan <APIKEY>016 <APIKEY>0:33:<APIKEY>9 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '128'
+      - 1<APIKEY>8
       Connection:
       - keep-alive
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Access-Control-Max-Age:
       - '600'
       Access-Control-Allow-Methods:
@@ -168,8 +168,147 @@ http_interactions:
       - Content-Type, x-requested-with
     body:
       encoding: UTF-8
-      string: '{"address":"integration-test-email@DOMAIN.TEST","message":"Bounced
+      string: ! '{"address":"integration-test-email@DOMAIN.TEST","message":"Bounced
         address has been removed"}'
     http_version: 
   recorded_at: Fri, 08 Jan 2016 20:33:30 GMT
-recorded_with: VCR 3.0.1
+- request:
+    method: post
+    uri: https://api.mailgun.net/v3/bounces
+    body:
+      encoding: US-ASCII
+      string: address=integration-test-email%40&code=550&error=Integration%<APIKEY>0Test
+    headers:
+      Accept:
+      - ! '*/*; q=0.5, application/xml'
+      Accept-Encoding:
+      - gzip, deflate
+      Content-Length:
+      - '67'
+      Content-Type:
+      - application/x-www-form-urlencoded
+      User-Agent:
+      - Ruby
+      Authorization:
+      - Basic YXBpOjI=
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Access-Control-Allow-Headers:
+      - Content-Type, x-requested-with
+      Access-Control-Allow-Methods:
+      - GET, POST, PUT, DELETE, OPTIONS
+      Access-Control-Allow-Origin:
+      - ! '*'
+      Access-Control-Max-Age:
+      - '600'
+      Content-Type:
+      - application/octet-stream
+      Date:
+      - Tue, <APIKEY>5 Jun <APIKEY>019 08:01:1<APIKEY> GMT
+      Server:
+      - nginx
+      Strict-Transport-Security:
+      - max-age=60; includeSubDomains
+      Content-Length:
+      - <APIKEY>3
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: Mailgun Magnificent API
+    http_version: 
+  recorded_at: Tue, 25 Jun 2019 08:01:15 GMT
+- request:
+    method: get
+    uri: https://api.mailgun.net/v3/bounces/integration-test-email@
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+      Authorization:
+      - Basic YXBpOjI=
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Access-Control-Allow-Headers:
+      - Content-Type, x-requested-with
+      Access-Control-Allow-Methods:
+      - GET, POST, PUT, DELETE, OPTIONS
+      Access-Control-Allow-Origin:
+      - ! '*'
+      Access-Control-Max-Age:
+      - '600'
+      Content-Type:
+      - application/octet-stream
+      Date:
+      - Tue, <APIKEY>5 Jun <APIKEY>019 08:01:13 GMT
+      Server:
+      - nginx
+      Strict-Transport-Security:
+      - max-age=60; includeSubDomains
+      Content-Length:
+      - <APIKEY>3
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: Mailgun Magnificent API
+    http_version: 
+  recorded_at: Tue, 25 Jun 2019 08:01:16 GMT
+- request:
+    method: get
+    uri: https://api.mailgun.net/v3/bounces
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Ruby
+      Authorization:
+      - Basic YXBpOjI=
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Access-Control-Allow-Headers:
+      - Content-Type, x-requested-with
+      Access-Control-Allow-Methods:
+      - GET, POST, PUT, DELETE, OPTIONS
+      Access-Control-Allow-Origin:
+      - ! '*'
+      Access-Control-Max-Age:
+      - '600'
+      Content-Type:
+      - application/octet-stream
+      Date:
+      - Tue, <APIKEY>5 Jun <APIKEY>019 08:01:14 GMT
+      Server:
+      - nginx
+      Strict-Transport-Security:
+      - max-age=60; includeSubDomains
+      Content-Length:
+      - <APIKEY>3
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: Mailgun Magnificent API
+    http_version: 
+  recorded_at: Tue, 25 Jun 2019 08:01:17 GMT
+recorded_with: VCR 3.0.3
